force-app/main/default/objects/QuickBooks_Connection_Settings__c/QuickBooks_Connection_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores the custom settings for the  QuickBooks Online Integration</description>
    <label>QuickBooks Connection Settings</label>
</CustomObject>