force-app/main/default/objects/QuickBooks_Connection_Settings__c/fields/Callback_Url__c.field-meta.xml
<CustomField>
    <fullName>Callback_Url__c</fullName>
    <description>Registers the callback url</description>
    <label>Callback Url</label>
    <length>200</length>
    <type>Text</type>
</CustomField>