force-app/main/default/objects/QuickBooks_Connection_Settings__c/fields/Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret__c</fullName>
    <description>The client Secret</description>
    <label>Client Secret</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>