force-app/main/default/objects/QuickBooks_Connection_Settings__c/fields/Is_QuickBooks_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>Is_QuickBooks_Sandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are we connecting to a QuickBooks Sandbox</description>
    <label>Is QuickBooks Sandbox</label>
    <type>Checkbox</type>
</CustomField>