force-app/main/default/objects/QuickBooks_Connection_Settings__c/fields/Prod_Minor_Version__c.field-meta.xml
<CustomField>
    <fullName>Prod_Minor_Version__c</fullName>
    <description>Production minor api version</description>
    <label>Prod Minor Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>