force-app/main/default/objects/QuickBooks_Connection_Settings__c/fields/Production_Base_Url__c.field-meta.xml
<CustomField>
    <fullName>Production_Base_Url__c</fullName>
    <description>Production Base Url</description>
    <label>Production Base Url</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>