force-app/main/default/objects/QuickBooks_Connection_Settings__c/fields/Production_Company_Id__c.field-meta.xml
<CustomField>
    <fullName>Production_Company_Id__c</fullName>
    <description>Production Company Id</description>
    <label>Production Company Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>