force-app/main/default/objects/QuickBooks_Connection_Settings__c/fields/Qbo_Auth_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Qbo_Auth_Endpoint__c</fullName>
    <description>Endpoint to request authorization code</description>
    <label>Qbo Auth Endpoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>