force-app/main/default/objects/QuickBooks_Connection_Settings__c/fields/Qbo_FetchAccessToken_EndPoint__c.field-meta.xml
<CustomField>
    <fullName>Qbo_FetchAccessToken_EndPoint__c</fullName>
    <description>use this to fetch an access token</description>
    <label>Qbo FetchAccessToken EndPoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>