force-app/main/default/objects/QuickBooks_Connection_Settings__c/fields/Qbo_RefreshToken_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Qbo_RefreshToken_Endpoint__c</fullName>
    <description>Use this to request for a refresh token</description>
    <label>Qbo RefreshToken Endpoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>