force-app/main/default/objects/QuickBooks_Connection_Settings__c/fields/Sandbox_Base_Url__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Base_Url__c</fullName>
    <description>Base Url for QB Sandbox</description>
    <label>Sandbox Base Url</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>