force-app/main/default/objects/QuickBooks_Connection_Settings__c/fields/Sandbox_Company_Id__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Company_Id__c</fullName>
    <description>Sandbox Company Id</description>
    <label>Sandbox Company Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>