force-app/main/default/objects/QuickBooks_Connection_Settings__c/fields/Sandbox_Minor_Version__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Minor_Version__c</fullName>
    <description>minor api version</description>
    <label>Sandbox Minor Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>