force-app/main/default/objects/QuickBooks_Connection_Settings__c/fields/Sbox_Verifier_Token__c.field-meta.xml
<CustomField>
    <fullName>Sbox_Verifier_Token__c</fullName>
    <description>Token used to verify webhook events sent into salesforce from QBO</description>
    <label>Sbox Verifier Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>